--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+	<button id="rock-btn">Rock</button>
+	<button id="paper-btn">Paper</button>
+	<button id="scissors-btn">Scissors</button>
+    <div id="result-ctn">
+    </div>
 </body>
 </html>
