--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-	<button id="rock-btn">Rock</button>
-	<button id="paper-btn">Paper</button>
-	<button id="scissors-btn">Scissors</button>
-    <div id="result-ctn">
+    <div buttons-container>
+        <button id="rock-btn">Rock</button>
+        <button id="paper-btn">Paper</button>
+        <button id="scissors-btn">Scissors</button>
+    </div>
+    <div id="status-container">
     </div>
 </body>
 </html>
